# CoreHook.Hooking

./: .appveyor.yml  .gitignore  CMakeLists.txt  README.md  build.cmd
dll/: CMakeLists.txt  common.mak
dll/corehook/: Makefile  corehook.cpp  corehook.def
msvc/: corehook.sln
msvc/corehook/: corehook.vcxproj  corehook.vcxproj.filters  detours.vcxproj  detours.vcxproj.filters
msvc/corehook-test/: DetoursTest.cpp  DetoursTest.h  corehook-test.vcxproj  corehook.h  detours_test.cpp  hook.h  hook_base.cpp  hook_test.cpp  pch.h  simple_detours.h  simple_detours_test.cpp  test.cpp
src/: CMakeLists.txt  Makefile  barrier.cpp  barrier.h  creatwth.cpp  detours.cpp  detours.h  disasm.cpp  modules.cpp  trampolinearm.asm  trampolinearm64.asm  trampolinex64.asm  trampolinex86.asm
vs/: corehook.sln
vs/corehook/: corehook.vcxproj  detours.vcxproj  detours.vcxproj.filters  ntstatus.h
