cmake_minimum_required(VERSION 3.2)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(COREHOOK_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR})
set(COREHOOK_INSTALL_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR}/bin)
set(COREHOOK_INSTALL_LIB_DIR ${CMAKE_CURRENT_BINARY_DIR}/lib)


include_directories(${COREHOOK_INSTALL_INCLUDE_DIR})

add_subdirectory(src)